Reformatted to PhET HTML style.

--- a/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
+++ b/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
@@ -20,8 +20,10 @@
     <title>Build an Atom</title>
 
     <link rel="stylesheet" href="../../common/phetcommon/css/phetcommon.css"/>
-    <link rel="stylesheet" href="../../contrib/bootstrap-2.2.1/css/bootstrap.css"/>
-    <link rel="stylesheet" href="../../contrib/bootstrap-2.2.1/css/bootstrap-responsive.css"/>
+    <link rel="stylesheet"
+          href="../../contrib/bootstrap-2.2.1/css/bootstrap.css"/>
+    <link rel="stylesheet"
+          href="../../contrib/bootstrap-2.2.1/css/bootstrap-responsive.css"/>
 
     <link rel="stylesheet" href="css/main-bootstrap.css">
 
@@ -49,45 +51,46 @@
 
         <div id="periodic-table-box" class="widget-box accordian-group">
             <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-target="#periodic-table-container" href="#">
-                <i class="icon-plus"></i> Periodic Table
-              </a>
+                <a class="accordion-toggle" data-toggle="collapse"
+                   data-target="#periodic-table-container" href="#">
+                    <i class="icon-plus"></i> Periodic Table
+                </a>
             </div>
 
             <div class="accordion-body collapse" id="periodic-table-container">
-              <div id="periodic-table" class="accordion-inner"></div>
+                <div id="periodic-table" class="accordion-inner"></div>
             </div>
         </div>
 
         <div id="symbol" class="widget-box accordian-group">
             <div class="accordion-heading">
-              <h2>Symbol</h2>
+                <h2>Symbol</h2>
             </div>
 
             <div class="accordion-body collapse">
-              <div id="detailed-element-symbol"  class="accordion-inner"></div>
+                <div id="detailed-element-symbol" class="accordion-inner"></div>
             </div>
         </div>
 
         <div id="mass-number" class="widget-box accordian-group">
             <div class="accordion-heading">
-              <h2>Mass Number</h2>
+                <h2>Mass Number</h2>
             </div>
 
             <div class="accordion-body collapse">
-              <div id="mass-number-container" class="accordion-inner"></div>
+                <div id="mass-number-container" class="accordion-inner"></div>
             </div>
         </div>
 
         <div id="net-charge" class="widget-box accordian-group">
             <div class="accordion-heading">
-              <h2>Net Charge</h2>
+                <h2>Net Charge</h2>
             </div>
 
             <div class="accordion-body collapse">
-              <div id="net-charge-container" class="accordion-inner">
-                  <div class="net-charge">0</div>
-              </div>
+                <div id="net-charge-container" class="accordion-inner">
+                    <div class="net-charge">0</div>
+                </div>
             </div>
         </div>
 
