--- a/trunk/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
+++ b/trunk/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
@@ -50,7 +50,7 @@
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-target="#periodic-table-container" href="#">
+                <a class="accordion-toggle" data-toggle="collapse" data-target="#periodic-table-container" href="javascript: void(0)">
                     <i class="icon-plus"></i> Periodic Table
                 </a>
             </div>
@@ -62,7 +62,7 @@
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-target="#detailed-element-symbol-container" href="#">
+                <a class="accordion-toggle" data-toggle="collapse" data-target="#detailed-element-symbol-container" href="javascript: void(0)">
                     <i class="icon-plus"></i> Symbol
                 </a>
             </div>
@@ -74,25 +74,29 @@
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-target="#mass-number-container" href="#">
+                <a class="accordion-toggle" data-toggle="collapse" data-target="#mass-number-accordion-container" href="javascript: void(0)">
                     <i class="icon-plus"></i> Mass Number
                 </a>
             </div>
 
-            <div class="accordion-body collapse" id="mass-number-container">
-                <div id="mass-number" class="accordion-inner"></div>
+            <div class="accordion-body collapse" id="mass-number-accordion-container">
+                <div id="mass-number-container" class="accordion-inner">
+                  <div id="mass-number"></div>
+                </div>
             </div>
         </div>
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-target="#net-charge-container" href="#">
+                <a class="accordion-toggle" data-toggle="collapse" data-target="#net-charge-accordion-container" href="javascript: vod(0)">
                     <i class="icon-plus"></i> Charge Meter
                 </a>
             </div>
 
-            <div class="accordion-body collapse" id="net-charge-container">
-                <div id="net-charge" class="accordion-inner"></div>
+            <div class="accordion-body collapse" id="net-charge-accordion-container">
+                <div id="net-charge-container">
+                    <div id="net-charge" class="accordion-inner"></div>
+                </div>
             </div>
         </div>
 
