fixing a typo from the last commit

--- a/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
+++ b/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
@@ -88,7 +88,7 @@
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-target="#net-charge-accordion-container" href="javascript: vod(0)">
+                <a class="accordion-toggle" data-toggle="collapse" data-target="#net-charge-accordion-container" href="javascript: void(0)">
                     <i class="icon-plus"></i> Charge Meter
                 </a>
             </div>
