--- a/trunk/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
+++ b/trunk/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
@@ -50,8 +50,8 @@
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-target="#periodic-table-container" href="javascript: void(0)">
-                    <i class="icon-plus"></i> Periodic Table
+                <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#periodic-table-container" href="javascript: void(0)">
+                    <i class="icon-plus"></i><i class="icon-minus"></i> Periodic Table
                 </a>
             </div>
 
@@ -62,8 +62,8 @@
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-target="#detailed-element-symbol-container" href="javascript: void(0)">
-                    <i class="icon-plus"></i> Symbol
+                <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#detailed-element-symbol-container" href="javascript: void(0)">
+                    <i class="icon-plus"></i><i class="icon-minus"></i> Symbol
                 </a>
             </div>
 
@@ -74,8 +74,8 @@
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-target="#mass-number-accordion-container" href="javascript: void(0)">
-                    <i class="icon-plus"></i> Mass Number
+                <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#mass-number-accordion-container" href="javascript: void(0)">
+                    <i class="icon-plus"></i><i class="icon-minus"></i> Mass Number
                 </a>
             </div>
 
@@ -88,8 +88,8 @@
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-target="#net-charge-accordion-container" href="javascript: void(0)">
-                    <i class="icon-plus"></i> Charge Meter
+                <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#net-charge-accordion-container" href="javascript: void(0)">
+                    <i class="icon-plus"></i><i class="icon-minus"></i> Charge Meter
                 </a>
             </div>
 
