--- a/trunk/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
+++ b/trunk/simulations-html/simulations/build-an-atom/build-an-atom-bootstrap.html
@@ -50,12 +50,12 @@
 
         <div class="widget-box accordion-group">
             <div class="accordion-heading">
-                <a class="accordion-toggle collapsed" data-toggle="collapse" data-target="#periodic-table-container" href="javascript: void(0)">
+                <a class="accordion-toggle" data-toggle="collapse" data-target="#periodic-table-container" href="javascript: void(0)">
                     <i class="icon-plus"></i><i class="icon-minus"></i> Periodic Table
                 </a>
             </div>
 
-            <div class="accordion-body collapse" id="periodic-table-container">
+            <div class="accordion-body in" id="periodic-table-container">
                 <div id="periodic-table" class="accordion-inner"></div>
             </div>
         </div>
