WIP net charge meter charge pairing graph

--- a/simulations-html/simulations/build-an-atom/build-an-atom.html
+++ b/simulations-html/simulations/build-an-atom/build-an-atom.html
@@ -61,9 +61,7 @@
         <div id="net-charge" data-role="collapsible" class=widget-box>
             <h2>Net Charge</h2>
 
-            <div id="net-charge-container">
-                <div class="net-charge">0</div>
-            </div>
+            <div id="net-charge-container"></div>
         </div>
     </div>
 </div>
